# algoliasearch-client-python

./: .coveragerc  .eslintrc.cjs  .flake8  .gitignore  .lintstagedrc  .prettierrc  .redocly.yaml  .stestr.conf  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  DOCKER_README.md  Dockerfile  MAINTAINERS.md  MANIFEST.in  Makefile  README.APPENGINE.txt  README.md  SECURITY.md  mypy.ini  package.json  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  unittest.cfg
.circleci/: config.yml
.codesandbox/: ci.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: check.yml  codegen.yml  pr-title.yml  release.yml  renovate.yml  scheduled-release.yml
.husky/: pre-commit
algoliasearch/: .gitignore  __init__.py  account_client.py  algoliasearch.py  analytics.py  analytics_client.py  analytics_client_async.py  answers_client.py  answers_client_async.py  client.py  configs.py  exceptions.py  helpers.py  helpers_async.py  index.py  index_content.py  insights_client.py  insights_client_async.py  iterators.py  iterators_async.py  personalization_client.py  personalization_client_async.py  recommend_client.py  recommend_client_async.py  recommendation_client.py  recommendation_client_async.py  responses.py  search_client.py  search_client_async.py  search_index.py  search_index_async.py  transport.py  user_agent.py  user_insights_client.py  version.py
algoliasearch/.openapi-generator/: FILES
algoliasearch/abtesting/: __init__.py  api_client.py  client.py  config.py  configuration.py  rest.py
algoliasearch/abtesting_v3/: __init__.py  client.py  config.py
algoliasearch/agent_studio/: client.py  config.py
algoliasearch/analytics/: __init__.py  api_client.py  client.py  config.py  configuration.py  exceptions.py  rest.py
algoliasearch/composition/: __init__.py  client.py  config.py
algoliasearch/config/: config.py  search_config.py
algoliasearch/http/: __init__.py  api_response.py  base_config.py  base_transporter.py  chunked_helper_options.py  exceptions.py  helpers.py  host.py  hosts.py  hosts_collection.py  params.py  request_options.py  requester.py  requester_async.py  retry.py  serializer.py  sse.py  transporter.py  transporter_async.py  transporter_sync.py  user_agent.py  verb.py  verbs.py
algoliasearch/ingestion/: __init__.py  api_client.py  client.py  config.py  configuration.py  rest.py
algoliasearch/insights/: __init__.py  api_client.py  client.py  config.py  configuration.py  exceptions.py  rest.py
algoliasearch/monitoring/: __init__.py  api_client.py  api_response.py  client.py  config.py  configuration.py  rest.py
algoliasearch/personalization/: __init__.py  api_client.py  client.py  config.py  configuration.py  rest.py
algoliasearch/query_suggestions/: __init__.py  api_client.py  client.py  config.py  configuration.py  rest.py
algoliasearch/recommend/: __init__.py  api_client.py  client.py  config.py  configuration.py  rest.py
algoliasearch/response/: indexing_response.py  response.py
algoliasearch/search/: __init__.py  api_client.py  client.py  config.py  configuration.py  rest.py
algoliasearch/tests/: test_timeout_integration.py  test_transporter_sync_unit.py
algoliasearch/usage/: __init__.py  client.py  config.py
clients/: README.md
clients/algoliasearch-client-dart/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  melos.yaml  pubspec.yaml  sync.sh
clients/algoliasearch-client-java/: CHANGELOG.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
clients/algoliasearch-client-java-2/: .java-version  CHANGELOG.md
clients/algoliasearch-client-javascript/: package.json
clients/algoliasearch-client-kotlin/: .gitignore  .openapi-generator-ignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
clients/algoliasearch-client-php/: CHANGELOG.md
config/: .java-version  base.tsconfig.json  clients.config.json  generation.config.js  generation.config.mjs  openapitools.json  release.config.json
doc/reference/: algoliasearch.rst  conf.py  index.rst  modules.rst
eslint/: jest.config.cjs  package.json
generators/: build.gradle
playground/dart/: pubspec.yaml  pubspec_overrides.yaml
playground/go/: analytics.go  go.mod  go.sum  ingestion.go  insights.go  main.go  personalization.go  predict.go  query-suggestions.go  recommend.go  search.go
playground/java/: build.gradle  settings.gradle
playground/kotlin/: build.gradle.kts  settings.gradle.kts
requirements/: requirements-async.txt  requirements-code-style-checker.txt  requirements-coverage.txt  requirements-release.txt  requirements-static-type-checker.txt  requirements-testing.txt
scripts/: .eslintrc.cjs  buildClients.ts  buildSpecs.ts  common.ts  config.ts  formatter.ts  generate.ts  jest.config.ts  knip.json  package.json  playground.ts  spinners.ts  tsconfig.json  types.ts
scripts/__tests__/: common.test.ts
scripts/ci/: utils.ts
scripts/cli/: index.ts  utils.ts
scripts/cts/: generate.ts  runCts.ts
scripts/docker/: build.sh  mount.sh
scripts/husky/: pre-commit.mjs
scripts/pre-gen/: generateOpenapitools.ts  index.ts  removeExistingCodegen.ts
scripts/release/: common.ts  createReleasePR.ts  text.ts  types.ts  updateAPIVersions.ts
scripts/website/: build.sh
specs/abtesting/: spec.yml
specs/analytics/: spec.yml
specs/bundled/: README.md  abtesting.doc.yml  abtesting.yml  algoliasearch.yml  analytics.doc.yml  analytics.yml  ingestion.doc.yml  ingestion.yml  insights.doc.yml  insights.yml  monitoring.doc.yml  monitoring.yml  predict.yml  (+8 more)
tests/: __init__.py  conftest.py  fake_session.py  helpers.py  run_tests_async.sh  run_tests_coverage.sh  run_tests_sync.sh  run_tests_sync_with_asyncio.sh  test_MCM.py  test_account_client.py  test_analytics.py  test_client.py  test_client_compat.py  test_client_new.py  test_compat.py  test_index.py  test_insights_client.py  test_keys.py  test_old.py  test_old_compat.py  test_user_insights_client.py
website/: .gitignore  docusaurus.config.js  package.json  sidebars.js
(+2787 files in other folders)
