[tool.poetry]
name = "algoliasearch"
version = "4.0.0b4"
description = "A fully-featured and blazing-fast Python API client to interact with Algolia."
authors = ["Algolia Team <support@algolia.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.algolia.com"
repository = "https://github.com/algolia/algoliasearch-client-python"
keywords = ["algolia", "search", "full-text-search", "neural-search"]
classifiers = [
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.8.1"
urllib3 = ">= 1.25.3"
aiohttp = ">= 3.9.2"
python-dateutil = ">= 2.8.2"
async-timeout = ">= 4.0.3"
pydantic = ">= 2"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
autoflake = "2.2.1"
autopep8 = "2.0.4"
black = "23.11.0"
isort = "5.13.0"

[tool.flake8]
max-line-length = 88
ignore = ['E501']

[tool.isort]
line_length=88
include_trailing_comma=true
multi_line_output=3
force_grid_wrap=0
combine_as_imports=true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"