[tool.poetry]
name = "algoliasearch"
version = "4.6.3"
description = "A fully-featured and blazing-fast Python API client to interact with Algolia."
authors = ["Algolia Team"]
license = "MIT"
readme = "README.md"
homepage = "https://www.algolia.com"
repository = "https://github.com/algolia/algoliasearch-client-python"
keywords = ["algolia", "search", "full-text-search", "neural-search"]
classifiers = [
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = ">= 3.8.1"
urllib3 = ">= 1.25.3"
aiohttp = ">= 3.9.2"
requests = ">=2.32.3"
python-dateutil = ">= 2.8.2"
async-timeout = ">= 4.0.3"
pydantic = ">= 2"

[tool.poetry.group.dev.dependencies]
ruff = "== 0.6.8"
pyright = "== 1.1.383"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
