[metadata]
name = algoliasearch
version = 0.1
author = Algolia Team
author_email = support@algolia.com
maintainer = Algolia Team
maintainer_email = support@algolia.com
url = https://github.com/algolia/algoliasearch-client-python
description = Algolia Search API Client for Python.
long_description = file: README.md
license = MIT
license_file = LICENSE
long_description_content_type = text/markdown
keywords = algolia, pyalgolia, search, backend, hosted, cloud, full-text search, faceted search
platform=any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Development Status :: 5 - Production/Stable

[options]
zip_safe = True
packages = find:
install_requires =
    requests>=2.21,<3.0
python_requires = >=3.4

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
norecursedirs=tests/helpers
