[metadata]
name = algoliasearch
version = 2.0-dev
author = Algolia Team
author_email = support@algolia.com
maintainer = Algolia Team
maintainer_email = support@algolia.com
url = https://github.com/algolia/algoliasearch-client-python
description = Algolia Search API Client for Python.
long_description = file: README.md
license = MIT
license_file = LICENSE
long_description_content_type = text/markdown
keywords = algolia, py, search, backend, hosted, cloud, full-text search, faceted search
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Development Status :: 5 - Production/Stable

[options]
zip_safe = True
packages = find:
install_requires =
    requests>=2.21,<3.0
    typing>=3.6,<4.0
python_requires = >=2.7, !=3.0.*, !=3.1.*', !=3.2.*, !=3.3.*'

[bdist_wheel]
universal = 1
