[metadata]
name = algoliasearch
version = attr: algoliasearch.__version__
url = https://github.com/algolia/algoliasearch-client-python
project_urls =
  CI: GitHub Actions = https://github.com/algolia/api-clients-automation/actions
  Docs = https://algolia.com/docs
  GitHub: issues = https://github.com/algolia/algoliasearch-client-python/issues
  GitHub: repo = https://github.com/algolia/algoliasearch-client-python/issues
description = ⚡️ A fully-featured and blazing-fast Python API client to interact with Algolia.
long_description = file: README.md
long_description_content_type = textmarkdown
maintainer = support team <support@algolia.com>
maintainer_email = support@algolia.com
license = MIT
license_files = LICENSE
keywords = algolia, py, search, backend, hosted, cloud, full-text search, faceted search
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Development Status :: 5 - Production/Stable

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    urllib3>=1.25.3,<2.0
    aiohttp>=3.9.2,<4.0
    python-dateutil>=2.8.2,<3.0
    pydantic>=2,3.0
    typing-extensions>=4.7.1,<5.0
python_requires = >= 3.8
